--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,6 +71,14 @@ article {
         }
     }
 
+    ul {
+        li {
+            font-size: 1.5rem;
+            line-height: 1.5em;
+            list-style: square outside none;
+        }
+    }
+
     blockquote {
         border-left: 10px solid #ccc;
         margin: 1.5em 0;
